2008-02-01  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.1 TAGGED FOR RELEASE ***

	* changes:	Updates for 8.5.1 release.

2008-02-01  Reinhard Max  <max@suse.de>

	* generic/tkImgGIF.c: Fixed a buffer overflow (CVE-2006-4484).
	* tests/imgPhoto.test: Added a test for the above.

2008-01-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/msgbox.tcl (::tk::MessageBox): don't use ttk::label in
	low depth/aqua fallback, as it doesn't support -bitmap.

	* win/tkWinDialog.c (Tk_MessageBoxObjCmd): pass "" instead of NULL
	when -title isn't set.  [Bug #1881892]

2008-01-31  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/panedwindow.n: Added proper description of -height and -width
	options, which aren't "standard". Last of fallout from [Bug 1882495].

2008-01-30  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/canvas.n, doc/listbox.n, doc/message.n: Fix erroneous listing of
	"standard" options. [Bug 1882495]

2008-01-29  Joe English  <jenglish@users.sourceforge.net>

	* library/treeview.tcl: Fix bug in Shift-ButtonPress-1 binding (error
	if no current focus item; reported on c.l.t.)

2008-01-29  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/ttk_*.n: Adjusted handling of the standard options part of the
	Ttk manual pages so that they are documented in the correct location.
	[Bug 1876493]

2008-01-28  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c: Re-fix strict-aliasing warnings reintroduced by
	last patch.

2008-01-27  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkNotebook.c: Make sure to schedule a redisplay when
	adding and/or hiding tabs. [Bug 1878298]

2008-01-27  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixRFont.c: Merged common code from InitFont() and
	TkpGetFontAttrsForChar(), factored into GetTkFontAttributes() and
	GetTkFontMetrics(). Removed write-only struct UnixFtFont member
	'drawable'. Removed unneeded double-pointer indirections. Ensure that